[project]
name = "llm-knowledge-base"
version = "0.1.0"
description = "LLM-powered personal knowledge base. Ingest sources, compile into a cross-linked wiki, query with natural language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["llm", "knowledge-base", "obsidian", "wiki", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "trafilatura>=1.12",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "yt-dlp>=2024.0",
    "matplotlib>=3.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.12",
]

[project.scripts]
kb = "kb.cli:cli"

[project.urls]
Homepage = "https://github.com/joshuaswanson/llm-knowledge-base"
Repository = "https://github.com/joshuaswanson/llm-knowledge-base"

[tool.hatch.build.targets.wheel]
packages = ["kb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
